--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,38 @@
     </style>
 
     <style name="Theme.WhatNow" parent="Base.Theme.WhatNow" />
+
+
+
+
+
+
+
+    <!--Light Mode -->
+
+    <!--use this style name in main Layout-->
+    <style name="SCREEN">
+        <item name="android:background">#F5F5F5</item>
+    </style>
+
+
+    <!--use this style name in main textView or any view has text-->
+    <style name="PRIMARY_TEXT">
+        <item name="android:textColor">#000000</item>
+    </style>
+
+    <!--use this style name in secondary textView or any view has text-->
+    <style name="SECONDARY_TEXT">
+        <item name="android:textColor">#757575</item>
+    </style>
+
+
+    <!--use this style name in button view-->
+    <style name="BUTTON">
+        <item name="android:textColor">#000000</item>
+        <item name="android:background">#2196F3</item>
+    </style>
+
+
+
 </resources>
