--- a/app/src/main/res/drawable/brush_background.xml
+++ b/app/src/main/res/drawable/brush_background.xml
@@ -1,26 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-
-
     <item>
         <shape android:shape="rectangle">
             <gradient
-                android:startColor="#87CEEB"
-            android:endColor="#FFFFFF"
-            android:angle="270"
-            android:type="linear" />
+                android:startColor="#00ACF6"
+                android:endColor="#FFFFFF"
+                android:angle="270"
+                android:type="linear" />
         </shape>
     </item>
-
     <item android:left="0dp" android:right="0dp" android:top="0dp" android:bottom="0dp">
         <shape>
             <gradient
-                android:startColor="#80FFFFFF"
+                android:startColor="#7CDFEB"
                 android:endColor="#00FFFFFF"
                 android:angle="0"
                 android:type="radial"
                 android:gradientRadius="200dp"/>
         </shape>
     </item>
-
 </layer-list>
