--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,6 +15,12 @@
 
     <!--Light Mode -->
 
+    <!--use this style name in main Layout-->
+    <style name="SCREEN">
+        <item name="android:background">#F5F5F5</item>
+    </style>
+
+
     <!--use this style name in main textView or any view has text-->
     <style name="PRIMARY_TEXT">
         <item name="android:textColor">#000000</item>
