--- a/app/src/main/res/layout/artical_list_item.xml
+++ b/app/src/main/res/layout/artical_list_item.xml
@@ -52,14 +52,26 @@
             app:layout_constraintStart_toEndOf="@id/artical_title" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/share_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/favorite_btn"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginEnd="8dp"
+            android:src="@drawable/heart"
+            app:layout_constraintEnd_toStartOf="@id/share_btn"
+            app:layout_constraintTop_toTopOf="@id/share_btn"
+            app:layout_constraintStart_toStartOf="@id/share_btn"/>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/share_btn"
+            style="@style/ButtonWithoutBackground"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_margin="8dp"
-            android:backgroundTint="@color/white"
             android:src="@drawable/share"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintStart_toEndOf="@id/favorite_btn"
+            app:layout_constraintTop_toTopOf="@id/shadow_view" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
