--- a/app/src/main/res/layout/fragment_no_news.xml
+++ b/app/src/main/res/layout/fragment_no_news.xml
@@ -5,9 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/brush_background"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="20dp"
-    android:layout_marginTop="50dp"
+    android:layout_height="match_parent"
     android:orientation="vertical">
 
     <com.airbnb.lottie.LottieAnimationView
@@ -15,7 +13,7 @@
         android:layout_width="200dp"
         android:layout_height="300dp"
         android:layout_gravity="center"
-        app:lottie_url="https://lottie.host/ead826e5-ab65-4f15-b10e-443fdf96dd76/CoeqiEEbLg.json"
+        app:lottie_url="https://lottie.host/9ca74a0e-f127-4dc6-86e3-be822e2e874f/GxvDRdWHaD.json"
         tools:src="@tools:sample/avatars" />
 
     <TextView
@@ -33,5 +31,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="try another search" />
+        android:text="Try Another Search" />
 </LinearLayout>
