--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
+    style="@style/BACKGROUND"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/brush_background"
     android:clipChildren="false"
     android:clipToPadding="false"
     tools:context=".MainActivity">
@@ -26,16 +26,17 @@
 
     <ImageButton
         android:id="@+id/search_ib"
-        android:src="@drawable/ic_search"
-        android:background="@color/white"
-        android:alpha="0.5"
         android:layout_width="50dp"
-        android:layout_height="50dp" />
+        android:layout_height="50dp"
+        android:alpha="0.5"
+        android:background="@color/white"
+        android:src="@drawable/ic_search" />
+
     <FrameLayout
+        android:id="@+id/fragment_container"
         android:layout_width="300dp"
         android:layout_height="600dp"
-        android:layout_gravity="center"
-        android:id="@+id/fragment_container"/>
+        android:layout_gravity="center" />
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/progress_bar"
