--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
+    style="@style/BACKGROUND"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:gravity="center"
-    android:background="@drawable/brush_background"
+    android:orientation="vertical"
     android:paddingStart="24dp"
-    android:paddingEnd="24dp"
     android:paddingTop="32dp"
+    android:paddingEnd="24dp"
     android:paddingBottom="32dp"
     tools:context=".MainActivity">
 
@@ -18,12 +18,13 @@
         android:id="@+id/email_et"
         android:layout_width="match_parent"
         android:layout_height="48dp"
+        android:layout_marginBottom="16dp"
         android:background="@drawable/rectangular_edit_text"
+        android:elevation="2dp"
+        style="@style/TEXT"
         android:hint="Email"
         android:inputType="textEmailAddress"
         android:padding="12dp"
-        android:layout_marginBottom="16dp"
-        android:elevation="2dp"
         android:textColor="@android:color/black"
         android:textColorHint="#757575"
         android:textSize="16sp" />
@@ -32,12 +33,13 @@
         android:id="@+id/password_et"
         android:layout_width="match_parent"
         android:layout_height="48dp"
+        android:layout_marginBottom="16dp"
         android:background="@drawable/rectangular_edit_text"
+        android:elevation="2dp"
         android:hint="Password"
         android:inputType="textPassword"
         android:padding="12dp"
-        android:layout_marginBottom="16dp"
-        android:elevation="2dp"
+        style="@style/TEXT"
         android:textColor="@android:color/black"
         android:textColorHint="#757575"
         android:textSize="16sp" />
@@ -47,39 +49,42 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
+        android:layout_marginBottom="24dp"
+        style="@style/TEXT"
         android:text="Forgot your password?"
         android:textColor="#2196F3"
-        android:textSize="14sp"
-        android:layout_marginBottom="24dp" />
+        android:textSize="14sp" />
 
     <Button
         android:id="@+id/login_btn"
         android:layout_width="match_parent"
         android:layout_height="48dp"
+        android:layout_marginBottom="16dp"
         android:backgroundTint="#2196F3"
+        android:elevation="2dp"
         android:text="Login"
         android:textColor="@android:color/white"
-        android:textSize="18sp"
-        android:elevation="2dp"
-        android:layout_marginBottom="16dp" />
+        style="@style/BUTTON"
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/not_user_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginBottom="24dp"
         android:text="Not a user?"
         android:textColor="#2196F3"
-        android:textSize="16sp"
-        android:layout_marginBottom="24dp" />
+        style="@style/TEXT"
+        android:textSize="16sp" />
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/progress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        app:lottie_url="@string/lottie_url"
         android:visibility="gone"
+        app:lottie_url="@string/lottie_url"
         tools:visibility="visible" />
 
 </LinearLayout>
