--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -1,15 +1,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
+    style="@style/BACKGROUND"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/brush_background"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:paddingStart="24dp"
-    android:paddingEnd="24dp"
     android:paddingTop="32dp"
+    android:paddingEnd="24dp"
     android:paddingBottom="32dp">
 
     <ImageView
@@ -22,74 +22,79 @@
 
     <EditText
         android:id="@+id/email_et"
+        style="@style/TEXT"
         android:layout_width="match_parent"
         android:layout_height="48dp"
+        android:layout_marginBottom="16dp"
         android:background="@drawable/rectangular_edit_text"
+        android:elevation="2dp"
         android:hint="Email"
         android:inputType="textEmailAddress"
         android:padding="12dp"
-        android:layout_marginBottom="16dp"
-        android:elevation="2dp"
         android:textColor="@android:color/black"
         android:textColorHint="#757575"
         android:textSize="16sp" />
 
     <EditText
         android:id="@+id/password_et"
+        style="@style/TEXT"
         android:layout_width="match_parent"
         android:layout_height="48dp"
+        android:layout_marginBottom="16dp"
         android:background="@drawable/rectangular_edit_text"
+        android:elevation="2dp"
         android:hint="Password"
         android:inputType="textPassword"
         android:padding="12dp"
-        android:layout_marginBottom="16dp"
-        android:elevation="2dp"
         android:textColor="@android:color/black"
         android:textColorHint="#757575"
         android:textSize="16sp" />
 
     <EditText
         android:id="@+id/con_pass_et"
+        style="@style/TEXT"
         android:layout_width="match_parent"
         android:layout_height="48dp"
+        android:layout_marginBottom="24dp"
         android:background="@drawable/rectangular_edit_text"
+        android:elevation="2dp"
         android:hint="Confirm Password"
         android:inputType="textPassword"
         android:padding="12dp"
-        android:layout_marginBottom="24dp"
-        android:elevation="2dp"
         android:textColor="@android:color/black"
         android:textColorHint="#757575"
         android:textSize="16sp" />
 
     <Button
         android:id="@+id/sign_up_btn"
+        style="@style/BUTTON"
         android:layout_width="match_parent"
         android:layout_height="48dp"
+        android:layout_marginBottom="16dp"
         android:backgroundTint="#2196F3"
+        android:elevation="2dp"
         android:text="Sign Up"
         android:textColor="@android:color/white"
-        android:textSize="18sp"
-        android:elevation="2dp"
-        android:layout_marginBottom="16dp" />
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/already_user_tv"
+        style="@style/TEXT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginBottom="24dp"
         android:text="Already a user?"
         android:textColor="#2196F3"
-        android:textSize="16sp"
-        android:layout_marginBottom="24dp" />
+        android:textSize="16sp" />
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/progress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:lottie_url="@string/lottie_url"
         android:layout_gravity="center"
         android:visibility="gone"
+        app:lottie_url="@string/lottie_url"
         tools:visibility="visible" />
 
 </LinearLayout>
