--- a/app/src/main/res/layout/fragment_no_news.xml
+++ b/app/src/main/res/layout/fragment_no_news.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/brush_background"
+style="@style/BACKGROUND"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -18,6 +18,7 @@
 
     <TextView
         android:id="@+id/no_news_tv"
+        style="@style/TEXT"
         android:layout_margin="16dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -26,7 +27,7 @@
 
     <Button
         android:id="@+id/try_again_btn"
-        android:textColor="@color/black"
+        android:textColor="@color/gray"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
