--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -5,24 +5,26 @@
     android:layout_height="match_parent">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="300dp"
-        android:layout_height="600dp"
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
-        app:cardCornerRadius="16dp">
+        app:cardCornerRadius="16dp"
+        android:elevation="8dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="16dp">
+            android:padding="16dp">
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/edit_query"
                 style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
@@ -30,32 +32,38 @@
                     android:hint="What are you looking for?" />
             </com.google.android.material.textfield.TextInputLayout>
 
+
             <TextView
                 android:id="@+id/search_options"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Advanced Search options:"
-                app:layout_constraintEnd_toEndOf="@id/edit_query"
-                app:layout_constraintStart_toStartOf="@id/edit_query"
-                app:layout_constraintTop_toBottomOf="@id/edit_query" />
+                android:textStyle="bold"
+                android:textSize="16sp"
+                app:layout_constraintTop_toBottomOf="@id/edit_query"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="12dp" />
+
 
             <TextView
                 android:id="@+id/sortBy_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Sort By:"
-                app:layout_constraintStart_toStartOf="@id/sort_by_rg"
-                app:layout_constraintTop_toBottomOf="@id/search_options" />
+                android:textStyle="bold"
+                app:layout_constraintTop_toBottomOf="@id/search_options"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="8dp" />
+
 
             <RadioGroup
                 android:id="@+id/sort_by_rg"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:checkedButton="@id/sort_by_date_rb"
                 android:orientation="vertical"
-                android:textAlignment="center"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/sortBy_tv">
+                app:layout_constraintTop_toBottomOf="@id/sortBy_tv"
+                app:layout_constraintStart_toStartOf="parent">
 
                 <RadioButton
                     android:id="@+id/sort_by_date_rb"
@@ -76,31 +84,37 @@
                     android:text="Popularity" />
             </RadioGroup>
 
+
             <Spinner
                 android:id="@+id/Language_Spinner"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                app:layout_constraintEnd_toEndOf="@id/sort_by_rg"
-                app:layout_constraintStart_toStartOf="@id/sort_by_rg"
+                android:layout_marginTop="16dp"
+                android:minHeight="48dp"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/sort_by_rg" />
+
 
             <TextView
                 android:id="@+id/from_date_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="48dp"
                 android:text="From:"
+                android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/Language_Spinner" />
 
             <ImageButton
                 android:id="@+id/from_date_ib"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/brush_background"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_marginStart="12dp"
+                android:background="?attr/selectableItemBackground"
+                android:contentDescription="Select From Date"
                 android:src="@drawable/ic_calender"
                 app:layout_constraintStart_toEndOf="@id/from_date_tv"
-                app:layout_constraintTop_toBottomOf="@id/Language_Spinner" />
+                app:layout_constraintTop_toTopOf="@id/from_date_tv" />
 
             <TextView
                 android:id="@+id/selected_from_date_tv"
@@ -109,37 +123,45 @@
                 app:layout_constraintStart_toEndOf="@id/from_date_ib"
                 app:layout_constraintTop_toTopOf="@id/from_date_ib" />
 
+
             <TextView
                 android:id="@+id/to_date_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="52dp"
                 android:text="To:"
+                android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/from_date_tv" />
 
             <ImageButton
                 android:id="@+id/to_date_ib"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/brush_background"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_marginStart="32dp"
+                android:background="?attr/selectableItemBackground"
+                android:contentDescription="Select to Date"
                 android:src="@drawable/ic_calender"
                 app:layout_constraintStart_toEndOf="@id/to_date_tv"
-                app:layout_constraintTop_toBottomOf="@id/from_date_ib" />
+                app:layout_constraintTop_toTopOf="@id/to_date_tv" />
 
             <TextView
                 android:id="@+id/selected_to_date_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toEndOf="@id/to_date_ib"
-                app:layout_constraintTop_toBottomOf="@id/selected_from_date_tv" />
+                app:layout_constraintTop_toTopOf="@id/to_date_ib" />
+
 
             <Button
+                android:id="@+id/find_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/find_btn"
+                android:layout_marginBottom="8dp"
                 android:text="Find!"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
