--- a/app/src/main/res/layout/fragment_no_news.xml
+++ b/app/src/main/res/layout/fragment_no_news.xml
@@ -8,13 +8,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/no_news_animation"
-        android:layout_width="200dp"
-        android:layout_height="300dp"
-        android:layout_gravity="center"
-        app:lottie_url="https://lottie.host/9ca74a0e-f127-4dc6-86e3-be822e2e874f/GxvDRdWHaD.json"
-        tools:src="@tools:sample/avatars" />
+<!--    <com.airbnb.lottie.LottieAnimationView-->
+<!--        android:id="@+id/no_news_animation"-->
+<!--        android:layout_width="200dp"-->
+<!--        android:layout_height="300dp"-->
+<!--        android:layout_gravity="center"-->
+<!--        app:lottie_url="https://lottie.host/9ca74a0e-f127-4dc6-86e3-be822e2e874f/GxvDRdWHaD.json"-->
+<!--        tools:src="@tools:sample/avatars" />-->
 
     <TextView
         android:id="@+id/no_news_tv"
