--- a/app/src/main/res/layout/activity_setting_api.xml
+++ b/app/src/main/res/layout/activity_setting_api.xml
@@ -16,7 +16,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:padding="16dp"
-        android:text="What are you interested in?"
+        android:text="@string/setting_api_1"
         android:textAlignment="center"
         android:textAppearance="?attr/textAppearanceHeadline6"
         android:textColor="@color/black"
@@ -31,7 +31,7 @@
         style="@style/TEXT"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="• Categories"
+        android:text="@string/setting_api_2"
         android:textAppearance="?attr/textAppearanceSubtitle1"
         android:textColor="@color/black"
         android:textStyle="bold"
@@ -55,7 +55,7 @@
         style="@style/TEXT"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="• Country"
+        android:text="@string/setting_api_3"
         android:textAppearance="?attr/textAppearanceSubtitle1"
         android:textColor="@color/black"
         android:textStyle="bold"
@@ -79,7 +79,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="• Topics"
+        android:text="@string/setting_api_4"
         android:textAppearance="?attr/textAppearanceSubtitle1"
         android:textColor="@color/black"
         android:textStyle="bold"
@@ -93,7 +93,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:background="@drawable/rounded_edittext"
-        android:hint="Enter a topic"
+        android:hint="@string/setting_api_5"
         style="@style/TEXT"
         android:padding="12dp"
         android:textAppearance="?attr/textAppearanceBody1"
@@ -111,7 +111,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:background="@drawable/button_background_outline"
-        android:text="Submit"
+        android:text="@string/setting_api_6"
         android:textAllCaps="false"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
