--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,170 +1,166 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_gravity="center"
+    android:elevation="8dp"
+    app:cardCornerRadius="16dp">
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        app:cardCornerRadius="16dp"
-        android:elevation="8dp">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        style="@style/BACKGROUND"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="16dp">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="16dp">
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/edit_query"
+            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/edit_query"
-                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
-                android:layout_width="0dp"
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="What are you looking for?" />
-            </com.google.android.material.textfield.TextInputLayout>
+                android:hint="@string/search_1" />
+        </com.google.android.material.textfield.TextInputLayout>
 
 
-            <TextView
-                android:id="@+id/search_options"
+        <TextView
+            android:id="@+id/search_options"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:text="@string/search_2"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/edit_query" />
+
+
+        <TextView
+            android:id="@+id/sortBy_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="@string/search_3"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/search_options" />
+
+
+        <RadioGroup
+            android:id="@+id/sort_by_rg"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checkedButton="@id/sort_by_date_rb"
+            android:orientation="vertical"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/sortBy_tv">
+
+            <RadioButton
+                android:id="@+id/sort_by_date_rb"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Advanced Search options:"
-                android:textStyle="bold"
-                android:textSize="16sp"
-                app:layout_constraintTop_toBottomOf="@id/edit_query"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="12dp" />
+                android:text="@string/search_4" />
 
-
-            <TextView
-                android:id="@+id/sortBy_tv"
+            <RadioButton
+                android:id="@+id/sort_by_relevance_rb"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Sort By:"
-                android:textStyle="bold"
-                app:layout_constraintTop_toBottomOf="@id/search_options"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginTop="8dp" />
+                android:text="@string/search_5" />
 
-
-            <RadioGroup
-                android:id="@+id/sort_by_rg"
+            <RadioButton
+                android:id="@+id/sort_by_popularity_rb"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintTop_toBottomOf="@id/sortBy_tv"
-                app:layout_constraintStart_toStartOf="parent">
-
-                <RadioButton
-                    android:id="@+id/sort_by_date_rb"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Sort by Date" />
-
-                <RadioButton
-                    android:id="@+id/sort_by_relevance_rb"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Relevant" />
-
-                <RadioButton
-                    android:id="@+id/sort_by_popularity_rb"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Popularity" />
-            </RadioGroup>
+                android:text="@string/search_6" />
+        </RadioGroup>
 
 
-            <Spinner
-                android:id="@+id/Language_Spinner"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:minHeight="48dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/sort_by_rg" />
+        <Spinner
+            android:id="@+id/Language_Spinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:minHeight="48dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/sort_by_rg" />
 
 
-            <TextView
-                android:id="@+id/from_date_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="48dp"
-                android:text="From:"
-                android:textStyle="bold"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/Language_Spinner" />
+        <TextView
+            android:id="@+id/from_date_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="48dp"
+            android:text="@string/search_7"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/Language_Spinner" />
 
-            <ImageButton
-                android:id="@+id/from_date_ib"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:layout_marginStart="12dp"
-                android:background="?attr/selectableItemBackground"
-                android:contentDescription="Select From Date"
-                android:src="@drawable/ic_calender"
-                app:layout_constraintStart_toEndOf="@id/from_date_tv"
-                app:layout_constraintTop_toTopOf="@id/from_date_tv" />
+        <ImageButton
+            android:id="@+id/from_date_ib"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="12dp"
+            android:background="?attr/selectableItemBackground"
+            android:contentDescription="@string/select_from_date"
+            android:src="@drawable/ic_calender"
+            app:layout_constraintStart_toEndOf="@id/from_date_tv"
+            app:layout_constraintTop_toTopOf="@id/from_date_tv" />
 
-            <TextView
-                android:id="@+id/selected_from_date_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintStart_toEndOf="@id/from_date_ib"
-                app:layout_constraintTop_toTopOf="@id/from_date_ib" />
-
-
-            <TextView
-                android:id="@+id/to_date_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="52dp"
-                android:text="To:"
-                android:textStyle="bold"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/from_date_tv" />
-
-            <ImageButton
-                android:id="@+id/to_date_ib"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:layout_marginStart="32dp"
-                android:background="?attr/selectableItemBackground"
-                android:contentDescription="Select to Date"
-                android:src="@drawable/ic_calender"
-                app:layout_constraintStart_toEndOf="@id/to_date_tv"
-                app:layout_constraintTop_toTopOf="@id/to_date_tv" />
-
-            <TextView
-                android:id="@+id/selected_to_date_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintStart_toEndOf="@id/to_date_ib"
-                app:layout_constraintTop_toTopOf="@id/to_date_ib" />
+        <TextView
+            android:id="@+id/selected_from_date_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toEndOf="@id/from_date_ib"
+            app:layout_constraintTop_toTopOf="@id/from_date_ib" />
 
 
-            <Button
-                android:id="@+id/find_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:text="Find!"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toStartOf="parent" />
+        <TextView
+            android:id="@+id/to_date_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="52dp"
+            android:text="@string/search_8"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/from_date_tv" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.cardview.widget.CardView>
+        <ImageButton
+            android:id="@+id/to_date_ib"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="32dp"
+            android:background="?attr/selectableItemBackground"
+            android:contentDescription="@string/select_to_date"
+            android:src="@drawable/ic_calender"
+            app:layout_constraintStart_toEndOf="@id/to_date_tv"
+            app:layout_constraintTop_toTopOf="@id/to_date_tv" />
 
-</FrameLayout>
+        <TextView
+            android:id="@+id/selected_to_date_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toEndOf="@id/to_date_ib"
+            app:layout_constraintTop_toTopOf="@id/to_date_ib" />
+
+
+        <Button
+            android:id="@+id/find_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:text="@string/search_9"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
