--- a/app/src/main/res/layout/activity_setting_api.xml
+++ b/app/src/main/res/layout/activity_setting_api.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
-    tools:context=".API.SettingAPI">
+    tools:context=".SettingAPI">
 
     <!-- Title TextView -->
     <TextView
