--- a/app/src/main/res/layout/activity_slider.xml
+++ b/app/src/main/res/layout/activity_slider.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/brush_background"
-    tools:context=".main.MainActivity">
+    tools:context=".MainActivity">
 
     <Button
         android:id="@+id/skipButton"
